# polar-running-index

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/polar_running_index/: __init__.py  cli.py  fit_parser.py  models.py  output.py  running_index.py
tests/: test_cli.py  test_e2e.py  test_fit_parser.py  test_running_index.py
tests/fixtures/: outdoor_half_marathon.FIT  outdoor_marathon.FIT  treadmill_12km.FIT  treadmill_15km.FIT
