[project]
name = "polar-running-index"
version = "0.1.0"
description = "Calculate Polar Running Index (VO2max estimate) from FIT files"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
dependencies = [
    "fitdecode>=0.11.0",
]

[project.scripts]
polar-running-index = "polar_running_index.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polar_running_index"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.19",
    "pytest>=7.0",
    "pytest-cov>=6.0",
    "pre-commit>=4.0",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=polar_running_index --cov-report=term-missing"

[tool.coverage.run]
source = ["polar_running_index"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F",     # pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["polar_running_index"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["polar_running_index"]
