[project]
name = "polar-running-index"
dynamic = ["version"]
description = "Calculate Polar Running Index (VO2max estimate) from FIT files"
readme = "README.md"
authors = [
    {name = "Willian Paixao", email = "willian@ufpa.br"},
]
keywords = ["polar", "running-index", "vo2max", "fit", "garmin", "running", "fitness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fitdecode>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/willianpaixao/polar-running-index"
Repository = "https://github.com/willianpaixao/polar-running-index"
Issues = "https://github.com/willianpaixao/polar-running-index/issues"

[project.scripts]
polar-running-index = "polar_running_index.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/polar_running_index/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/polar_running_index"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.19",
    "pytest>=7.0",
    "pytest-cov>=6.0",
    "pre-commit>=4.0",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=polar_running_index --cov-report=term-missing"

[tool.coverage.run]
source = ["polar_running_index"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F",     # pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["polar_running_index"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["polar_running_index"]
